# Pokedex-Checklist

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
assets/: logo.xcf  resources.qrc  resources.rc
packaging/: installer.nsi
src/: animatedHoverButton.h  animatedHoverIcon.h  convert_icon.py  main.cpp  mainWindow.cpp  mainWindow.h  pokemonData.h
